[package]
name = "zqtt"
version = "0.1.0"
authors = ["Anqur <anqurvanillapy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Zqtt, a fast and safe MQTT broker"
readme = ".github/README.md"
categories = ["network-programming"]
repository = "https://github.com/zfair/zqtt-rs"

[dependencies]
log = "0.4"
actix = "0.10.0-alpha.2"
actix-web = "2"
actix-rt = "1"
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3.4"
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
bytes = { version = "0.5", features = ["serde"] }
regex = "1"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "0.2.6"
default-features = false
features = [
    "rt-core",
    "rt-util",
    "io-driver",
    "io-util",
    "tcp",
    "uds",
    "udp",
    "time",
    "signal",
    "sync"
]

[lib]
name = "zqtt"
path = "src/lib.rs"
