[package]
name = "cmd"
version = "0.0.1"
license = "MIT"
edition = "2018"
publish = false
default-run = "zqtt-server"

[[bin]]
name = "zqtt-server"
path = "src/server.rs"

[dependencies]
actix = "0.10.0-alpha.1"
actix-rt = "1.0"
tokio = { version = "0.2.6", default-features = false, features=["rt-core", "rt-util", "io-driver", "io-util", "tcp", "uds", "udp", "time", "signal", "sync"] }
zqtt = { path = "../" }